add bar graph
